css/style.css
<!-- Stylesheet by Jeffrey Grinberg -->

.body {
	background-color: #C3D7DF;
	font-family: 'Open Sans', sans-serif;
	-webkit-font-smoothing: antialiased;
}
a {
	text-decoration: none;
}
a:visited {
	text-decoration: none;
}
/*Menu Section*/
#simple-menu {
	color: #393939;
	position: fixed;
	z-index: 9999;
	overflow: hidden;
}
i {
	padding: 10px 0 0 5px;
	
}
#simple-menu p{
	margin: -5px 0 0 5px;
}
#sidr  li{
 padding-left: 13px;	
}
#sidr li:hover {
	cursor: pointer;
}

/*Header Section*/
.header {
	height: 270px;
	background-color: #6991AC;
	font-family: 'Open Sans', sans-serif;
}
.header .header-info {
	text-align: center;
	padding-top: 30px;
}
.header .header-title {
	font-family: 'Open Sans', sans-serif;
	-webkit-font-smoothing: antialiased;
	letter-spacing: 1.01px;
	font-size: 40px;
	font-weight: 400;
	color: #F5F5F5;
}
.header .logo li {
	display: inline-block;
	text-align: center;
	list-style-type: none;
}
.header h5 {
	font-size: 13px;
	color: #F5F5F5;
}
/*Middle Section*/
.middle {
	height: 100%;
	background-color: #F5F5F5;
}
.middle #reset-button {
	padding-top: 20px;
	text-align: center;
}
.middle .reset-list {
	width: 100px;
	height: 30px;
	border-radius: 9px;
	border: 2px solid #D75C37;
	background-color: #D75C37;
	color: white;
}
.middle .add-item {
	text-align: center;
	padding-top: 30px;
}
.middle input {
	width: 80%;
	height: 30px;
	text-align: center;
	border-radius: 9px;
	border: 2px solid #555252;
	background-color: #555252;
	color: white;
}
::-webkit-input-placeholder {
   color: white;
}
:-moz-placeholder {
   color: white;  
}
::-moz-placeholder {
   color: white;  
}
:-ms-input-placeholder {  
   color: white;  
}
.middle .list {
	text-align: center;
	padding-top: 15px;
}
.strikethrough {
	background-color: #bdd879;
	border: 2px solid #bdd879;
	text-decoration': line-through;
}
.middle .list p {
	display: inline-block;
	text-align: center;
	width: 80%;
	height: 30px;
	margin-top: 10px;
	border-radius: 9px;
	border: 2px solid #67727A;
	background-color: #67727A;
	line-height: 25pt;
	color: white;
}
.deleteicon {
	float: left;
	margin: 5px 0 0 8px;
	background-image: url(../images/timessvg.svg);
	background-size: contain;
	height: 20px;
	width: 20px;
	cursor: pointer;
}
.checkicon {
	float: right;
	margin: 5px 8px 0 0;
	background-image: url(../images/checksvg.svg);
	background-size: contain;
	height: 20px;
	width: 20px;
	cursor: pointer;
}
#container { /*Push footer down.*/
	padding-bottom: 25px;
	background-color: #F5F5F5;
}
/*Footer Section*/
.footer {
	height: 200px;
	background-color: #C3D7DF;
}

